--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               <div class="card-body">
                   <br>
                   <h4>Game</h4>
-                  <img src="images/project3.JPG" alt="Project3" width="90%" height="auto">
+                  <img src="images/movie.png" alt="Project3" width="90%" height="auto">
               </div>
           </div>
           <div class="col-md-6">
