--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <div class="col-md-6">
               <div class="card-body">
                   <br>
-                  <h4>Game</h4>
+                  <h4>Movie Management System</h4>
                   <img src="images/movie.png" alt="Project3" width="90%" height="auto">
               </div>
           </div>
